@@ -108,6 +108,7 @@
 #include "http_log.h"
 #include "http_connection.h"
 #include "util_filter.h"
+#include "util_ebcdic.h"
 
 #if APR_HAVE_NETINET_IN_H
 #include <netinet/in.h>
